Logo overlaps on case studies page (bug 659045)

--- a/media/css/zamboni/docs.less
+++ b/media/css/zamboni/docs.less
@@ -93,6 +93,9 @@ ol.numbered {
         float: left;
         text-align: right;
         width: 30%;
+        img {
+            max-width: 100%;
+        }
     }
     .info {
         margin-left: 35%;
